send to telegram/split diary view

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
     <title>vsop cli</title>
-    <script src="https://use.fontawesome.com/7b54ece947.js"></script>
+    <!--script src="https://use.fontawesome.com/7b54ece947.js"></script-->
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
   </head>
   <body>
     <div id="q-app"></div>
